namespaces/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-tls-route
  namespace: grafana
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - grafana.j5t.io
  rules:
    - backendRefs:
        - name: grafana
          port: 80
